--- a/first_app/package.json
+++ b/first_app/package.json
@@ -5,9 +5,9 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "lite-server"
+    "start": "lite-server --open"
   },
-  "author": "",
+  "author": "Tanzim Rizwan",
   "license": "ISC",
   "devDependencies": {
     "lite-server": "^2.6.1"
